--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
-    "@material-ui/core": "^3.6.0",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
     "pg": "^7.8.2",
     "react": "^16.6.3",
@@ -14,7 +15,8 @@
     "react-scripts": "^2.1.3",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-saga": "^0.16.0"
+    "redux-saga": "^0.16.0",
+    "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
