--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
+    "linkify": "^0.2.1",
     "pg": "^7.8.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-linkify": "^0.2.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
